*Empty MediaWiki Message*

--- a/Izem.mw
+++ b/Izem.mw
@@ -1,7 +1,7 @@
 {{Automatic taxobox}}
-'''Izem''' ([[Assaɣ ussnan]]: ''Panthera leo'') s d [[aɣersiw]] [[timseksumin|amseksum]] n [[tawacult (tasnudert)|twacult]] n [[tiserɣuda|tserɣuda]] yeṭṭafaren [[Tawsit (tudersent)|Tawsit]] n [[aɣilas (tawsit)|iɣilasen]], 
-Izmawen ttidiren ass-a deg [[Tafriqt|Tefriqt n unẓul n taneẓruft]] akken i mazal degsen taɣreft meẓẓiyen deg  [Asya]] tettwaggez s [[angar|umihi n ungar]], ziktallit n [[azarmezruy|uzarmezruy]] llan ttidiren ula deg [[Turuft]], aɣeṛsiw-agi yenger deg tmiḍi tis snat [[send n tlallit]] imi aṭas i yettazzalen deffir-s akken ad [[agmar|t-gemren]] i wakken ad kksen alemsir-is neɣ ad tesxedmen i tujjya neɣ i wsedhu kan 
- 
+'''Izem''' ('''[[Assaɣ ussnan]]''': ''Panthera leo'') s d [[aɣersiw]] [[timseksumin|amseksum]] n [[tawacult (tasnudert)|twacult]] n [[tiserɣuda|tserɣuda]] yeṭṭafaren [[Tawsit (tudersent)|Tawsit]] n [[aɣilas (tawsit)|iɣilasen]], 
+Izmawen ttidiren ass-a deg [[Tafriqt|Tefriqt n unẓul n taneẓruft]] akken i mazal degsen taɣreft meẓẓiyen deg  [Asya]] tettwaggez s [[angar|umihi n ungar]], ziktallit n [[azarmezruy|uzarmezruy]] llan ttidiren ula deg [[Turuft]], aɣeṛsiw-agi yenger deg tmiḍi tis snat [[send n tlallit]] imi aṭas i yettazzalen deffir-s akken ad [[agmar|t-gemren]] i wakken ad kksen alemsir-is neɣ ad tesxedmen i tujjya neɣ i wsedhu kan
+
 == Addad d uẓayer n yizem ==
 Izem [[Addad n taggaẓt|yettusismel]] d akken-it d [[talmest]] yettwaggzen [[talmest ur tettwageẓ|umihi n ungar]] s tseddaṛt taddayt anda afimidi n tdersi-ynes tuli deg snat n [[tamrawt|temrawin]] yezrin seg 30% ar 50% yerna asirem n tudert n tɣrfin yeffɣen i [[Afrag aɣelnaw|yfergan iɣelnawen]] isliw (yeḍɛef) <br/>
 Zik nni, Izem deg [[Tafriqt|Tefriqt]] yella yettidir deg yal tama, deg yal tamurt ula di [[taneẓruft|tneẓruft]] yakk d idurar am [[Idurar n Aṭlas|idurar n waṭlas]]. Maca ass-a grant-d kra kan n tɣerfin yessufin (yettwaɛezlen) aladɣa deg tmura n usamar n Tefrikt
