*Empty MediaWiki Message*

--- a/Izem.mw
+++ b/Izem.mw
@@ -34,4 +34,7 @@ Deg tmurt n [[Tamurt n Leqbayel|Iqbayliyen]], izem mazal yettwassen yisem-is yer
 == Tamselyut ==
 * Omar Amastan Mouffok, imedyazen.
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
