*Empty MediaWiki Message*

--- a/Ayagwar.mw
+++ b/Ayagwar.mw
@@ -16,3 +16,8 @@ Ayagwar d aɣersiw meqren yakk deg [[amenẓaw|umenẓaw]] n Marikan, [[Azuk|Azu
 == Ayagwar deg yidles alsan ==
 
 == Taggaẓt n telmest ==
+
+[[Category:iɣersiwen]]
+[[Category:tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
