*Empty MediaWiki Message*

--- a/Aɣilas.mw
+++ b/Aɣilas.mw
@@ -6,4 +6,7 @@ Yettidir uɣilas deg [[Tafriqt|Tefrikt]] s anẓul n [[Taneẓruft tameqrant|tne
 
 == Asismel ==
 
-[[Taggayt:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
