*Empty MediaWiki Message*

--- a/Aɣilas_amaziɣ.mw
+++ b/Aɣilas_amaziɣ.mw
@@ -18,3 +18,5 @@ Aɣilas amaziɣ d [[aɣersiw]] [[timseksumin|amseksum]] iy tetten  [[iddew amazi
 
 [[Category:iɣersiwen]]
 [[Category:tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
