*Empty MediaWiki Message*

--- a/Aɣilas_(tawsit).mw
+++ b/Aɣilas_(tawsit).mw
@@ -10,3 +10,8 @@
 == Ẓeṛ daɣen ==
 * [[Aɣilas aberkan]] 
 * [[Aɣilas]]
+
+[[Category:iɣersiwen]]
+[[Category:tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
