*Empty MediaWiki Message*

--- a/Aɣsi.mw
+++ b/Aɣsi.mw
@@ -29,5 +29,7 @@ Tiẓra titrarin qqaren-t-d d akken aɣsi iban-d deg tazwara yakk deg [[Urasya]]
 * [[Uccen]]
 * [[Taydiyyin]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:Taydiyin]]
+[[Taggayt:Timsuṭad]]
+[[Taggayt:Timseksumin]]
