*Empty MediaWiki Message*

--- a/Isirru.mw
+++ b/Isirru.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
 
-'''isirru''', [[isem usnan]]: (''Meles Meles'') d yiwen n uɣersiw yettidiren di [[Turuft]]
+'''isirru''' ('''[[Assaɣ ussnan]]''': (''Meles Meles'')  [[aɣersiw]] yettidiren di [[Turuft]],
 Dɣa aɣersiw-a yella yettidir ula di [[tamurt n Leqbayel|Tmurt n Iqbayliyen]] maca tura ulac win yeẓran ma sulen (mazal-iten) neɣ [[angar|negren]]
 [[Category:aɣersiw]]
