*Empty MediaWiki Message*

--- a/Isirru.mw
+++ b/Isirru.mw
@@ -2,4 +2,7 @@
 
 '''isirru''' ('''[[Assaɣ ussnan]]''': (''Meles Meles'')  [[aɣersiw]] [[Timseksumin|amseksum]] yettidiren di [[Turuft]],
 Dɣa aɣersiw-a yella yettidir ula di [[tamurt n Leqbayel|Tmurt n Iqbayliyen]] maca tura ulac win yeẓran ma sulen (mazal-iten) neɣ [[angar|negren]]
-[[Category:aɣersiw]]
+
+[[Category:iɣersiwen]]
+[[Category:Timseksumin]]
+[[Taggayt:Timsuṭad]]
