*Empty MediaWiki Message*

--- a/Isirru.mw
+++ b/Isirru.mw
@@ -6,3 +6,4 @@ Dɣa aɣersiw-a yella yettidir ula di [[tamurt n Leqbayel|Tmurt n Iqbayliyen]] m
 [[Category:iɣersiwen]]
 [[Category:Timseksumin]]
 [[Taggayt:Timsuṭad]]
+[[Taggayt:Tidɣaɣatin]]
