--- a/Isirru.mw
+++ b/Isirru.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''isirru''' ('''[[Assaɣ ussnan]]''': ''Meles Meles'')  [[aɣersiw]] [[Timseksumin|amseksum]] yettidiren di [[Turuft]],
+'''isirru''' ('''[[Assaɣ ussnan]]''': ''Meles Meles'')  d [[aɣersiw]] [[Timseksumin|amseksum]] yettidiren di [[Turuft]],
 Dɣa aɣersiw-a yella yettidir ula di [[tamurt n Leqbayel|Tmurt n Iqbayliyen]] maca tura ulac win yeẓran ma sulen (mazal-iten) neɣ [[angar|negren]]
 
 [[Category:iɣersiwen]]
