*Empty MediaWiki Message*

--- a/Timsennent.mw
+++ b/Timsennent.mw
@@ -42,4 +42,8 @@ Ass-a, ccetla tettwaḥrez, tanduyt tettwagdel. Maca, iseggaden ttkemmilen ahdum
 ==Taɣbalut==
 Adlis n tmaziɣt n useggas wis 3 n ulmud alemmas n tmurt n Lezzayer (sb 66-67)
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Tibenferriwin]]
+[[Category:Iylalen]]
+[[Category:igṭaṭ]]
+[[Category:Iylalen iminigen]]
