*Empty MediaWiki Message*

--- a/Amekdad.mw
+++ b/Amekdad.mw
@@ -11,4 +11,8 @@ Tettarw-d [[tawtemt]] n umekdad gar n 2 ar 3 n [[aknuz|yeknaz]] deg [[tadist]] y
 * [[Aɣersiw]]
 * [[Tasnudert]]
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Taggayt:Timekdadin]]
+[[Taggayt:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Taggayt:Timseɣẓaẓ]]
