*Empty MediaWiki Message*

--- a/Amekdad.mw
+++ b/Amekdad.mw
@@ -13,6 +13,6 @@ Tettarw-d [[tawtemt]] n umekdad gar n 2 ar 3 n [[aknuz|yeknaz]] deg [[tadist]] y
 
 [[Category:iɣersiwen]]
 [[Taggayt:Timekdadin]]
-[[Taggayt:Timseksumin]]
+[[Taggayt:Timekdadin]]
 [[Category:Timsuṭad]]
 [[Taggayt:Timseɣẓaẓ]]
