--- a/Aɣezkal.mw
+++ b/Aɣezkal.mw
@@ -1,6 +1,6 @@
-[[Tugna:Talpa europaea MHNT.jpg|thumb|250px|Aɣezkal]]
+{{Automatic taxobox}}
 
-'''Aɣezkal''' d yiwen n [[aɣersiw|uɣersiw]] yeɣɣazen [[agennari|igennariyen]] s ddaw n [[akal|wakal]], Ytečč [[Ajirmeṭ|ijiremṭen]] akk d [[Ageṭṭuf|iweṭfen]]
+'''Aɣezkal''' d yiwen n [[aɣersiw|uɣersiw]] yeɣɣazen [[agennari|igennariyen]] s ddaw n [[akal|wakal]], Ytečč [[ijirmeṭ|ijiremṭen]] akk d [[Ageṭṭuf|iweṭfen]]
 
 == Ẓeṛ daɣen == 
 
