*Empty MediaWiki Message*

--- a/Aɣezkal.mw
+++ b/Aɣezkal.mw
@@ -1,6 +1,10 @@
 {{Automatic taxobox}}
 
-'''Aɣezkal''' d yiwen n [[aɣersiw|uɣersiw]] yeɣɣazen [[agennari|igennariyen]] s ddaw n [[akal|wakal]], Ytečč [[ijirmeṭ|ijiremṭen]] akk d [[Ageṭṭuf|iweṭfen]]
+'''Aɣezkal''' d yiwen n [[aɣersiw|uɣersiw]] meẓẓiyen n [[Timsuṭad|temsuṭad]] yeɣɣazen inga d iflayen s ddaw n [[akal|wakal]], I wakken ad yaff učči, Aɣezkal ytett [[ijirmeṭ|ijiremṭen]] akk d [[Ageṭṭuf|iweṭfen]]
+
+[[Taggayt:Timesburɣas]]
+[[Taggayt:Iɣersiwen]]
+[[Category:Timsuṭad]]
 
 == Ẓeṛ daɣen == 
 
