*Empty MediaWiki Message*

--- a/Aridal.mw
+++ b/Aridal.mw
@@ -4,7 +4,7 @@
 == Aglam ==
 Aridal d yiwen gar sin n telmas n [[ifis|yifis]] iy meqren yakk, Aglim-is d [[aras]] imal ar [[azunɣid|uzunɣid]] deg yakk tfekka-s 
 
-== Idgan n tudert ==
+== Ideggan n tudert ==
 Yettidir deg [[Tafriqt n ugafa|Tefrikt n ugafa]] d [[Asya talemmast]] d [[Lhend]]
 [[Category:Aɣersiw]]
 
