*Empty MediaWiki Message*

--- a/Azyam.mw
+++ b/Azyam.mw
@@ -34,7 +34,7 @@ Deg kra n yideggan n umadal [[aksum]] n uzyam d win yettwaččen. Maca agla ameq
 
 == Ẓeṛ daɣen ==
 
-[[Category:aɣersiw]]
+[[Category:Tizemkiyin]]
 [[Category:iɣersiwen]]
 [[Category:Timsuṭad]]
 [[Category:timsuṭad tiwlalin]]
