--- a/Arẓaẓ.mw
+++ b/Arẓaẓ.mw
@@ -12,3 +12,4 @@ Amur ameqran n telmas n yirẓaẓen (ugar n 100,000 n telmas) gan d [[ajenṭed
 
 [[Category:Tadlafriwin]]
 [[Category:Iburɣas]]
+[[Category:Tinammasin]]
