*Empty MediaWiki Message*

--- a/Tizizwit.mw
+++ b/Tizizwit.mw
@@ -16,3 +16,7 @@ Seg zik yella ubaɣr amyaɣ (nnfeɛ yettmbadlen) gar n [[afgan|ufgan]] d tzizwa
 == Tilmas yelhan yakk n tzizwa ==
 
 == Tiwlafin ==
+
+[[Taggayt:Tadlafriwin]]
+[[Taggayt:Iburɣas]]
+[[Taggayt:Tinammasin]]
