*Empty MediaWiki Message*

--- a/Tizizwa_n_tamment.mw
+++ b/Tizizwa_n_tamment.mw
@@ -10,3 +10,9 @@ Llan-t waṭas n [[talmest|telmas]] id isuffuɣen tamment, maca yessefk ad yili 
 == Tilmas ==
 
 == Taɣrast ==
+
+
+[[Taggayt:Iburɣas]]
+[[Taggayt:Tadlafriwin]]
+[[Taggayt:Tinammasin]]
+[[Taggayt:Tizizwa]]
