--- a/Tizizwa_n_tamment.mw
+++ b/Tizizwa_n_tamment.mw
@@ -16,3 +16,4 @@ Llan-t waṭas n [[talmest|telmas]] id isuffuɣen tamment, maca yessefk ad yili 
 [[Taggayt:Tadlafriwin]]
 [[Taggayt:Tinammasin]]
 [[Taggayt:Tizizwa]]
+[[Taggayt:Tizizwa n tamment]]
