*Empty MediaWiki Message*

--- a/Aggug.mw
+++ b/Aggug.mw
@@ -13,3 +13,6 @@ Yekka-d [[aglam|weglam]] n wazal n 4500 n [[talmest|telmas]] n [[izi|yizan]] n w
 == Akerrec ==
 
 == Aṭṭanen ==
+
+[[Taggayt:Iburɣas]]
+[[Taggayt:Tasenfriwin]]
