*Empty MediaWiki Message*

--- a/Taccelt.mw
+++ b/Taccelt.mw
@@ -1,11 +1,11 @@
 {{Automatic taxobox}}
-'''Taccelt''' ('''[[Assaɣ ussnan]]''': ''Daboia'') d yiwet n [[tawsit (tudersent)|tewsit]] n [[azrem|izerman]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tizermawin|tzermawin]] 
+'''Taccelt''' ('''[[Assaɣ ussnan]]''': ''Daboia'') d yiwet n [[tawsit (tudersent)|tewsit]] n [[azrem|izerman]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tizermawin|tzermawin]]. 
 
 == Ideggan n tudert ==
-Llant 5 n [[talmest|telmas]] deg tewsit-a ttidiren-t deg unẓul n [[Asya]] d [[Tafriqt n Ugafa|Tefriqt n ugafa]] 
+Llant 5 n [[talmest|telmas]] deg tewsit-a ttidiren-t deg unẓul n [[Asya]] d [[Tafriqt n Ugafa|Tefriqt n ugafa]]. 
 
 == Umuɣ n telmas == 
-S unect (ɛla ḥsab) n {{Bioref|ReptileDB genre|25 yennayer 2014}} : 
+S unect (ɛla ḥsab) n {{Bioref|reptileDB|taxon=Daboia|access-date=25 yennayer 2014}} : 
 * [[Taccelt taneẓraft]] (''Daboia deserti'') — Anderson, 1892
 * [[Taccelt tamaziɣt]] (''Daboia mauritanica'') — Duméril & Bibron, 1848
 * [[Taccelt n Falesṭin]] (''Daboia mauritanica'') — Duméril & Bibron, 1848
