--- a/Tafurri.mw
+++ b/Tafurri.mw
@@ -1,6 +1,6 @@
 [[Tugna:N2_Lichen.jpg|thumb|250px|]]
 
-'''Tafurri''' neɣ '''Agfes''' d [[amuddir]] [[Tamsetlelt (tasnudert)|amsetlel]] yezdin [[adal azegza]] neɣ [[adal azegzaw|adalen izegzawen]] d igursalen dgi tettili tezdayt neɣ assaɣ gar-asen d tallalt 
+'''Tafurri''' neɣ '''Uffar''' d [[amuddir]] [[Tamsetlelt (tasnudert)|amsetlel]] yezdin [[adal azegza]] neɣ [[adal azegzaw|adalen izegzawen]] d igursalen dgi tettili tezdayt neɣ assaɣ gar-asen d tallalt
 
 = Ismawen n iden ==
 Dɣa llan waṭas n yismawen i tfurri deg Teqbaylit d Tmaziɣt, Deg-sen: '''Afur''', '''Tajga''', '''Agfes''', '''Talidman''', '''Tufman'''
