*Empty MediaWiki Message*

--- a/Aɣuli.mw
+++ b/Aɣuli.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Aɣuli''' (yettwassen s '''ṭṭubba'''), ([[Assaɣ ussnan]]: ''Rattus'') d [[tawsit (tudersent)|tawsit]] n [[Timseɣẓaẓ|temseɣẓaẓ]] dgi llan-t 50 n [[talmest|telmas]], Dɣa d aɣul iy meqqren ɣef [[aɣeṛda|uɣerda]] s wezgen n ukilu (kg) 
+'''Aɣuli''' ('''[[Assaɣ ussnan]]''': ''Rattus''), (yettwassen s '''ṭṭubba''') d [[tawsit (tudersent)|tawsit]] n [[Timseɣẓaẓ|temseɣẓaẓ]] dgi llan-t 50 n [[talmest|telmas]], Dɣa d aɣul iy meqqren ɣef [[aɣeṛda|uɣerda]] s wezgen n ukilu (kg) 
 
 Akken i llan-t dges telmas d [[agrad|timegrudin]] iy zemren ad idiren deg wexxam yakk d ufgan
 
