--- a/Udad.mw
+++ b/Udad.mw
@@ -1,5 +1,16 @@
 {{Automatic taxobox}}
-'''Udad''' ('''[[Assaɣ ussnan]]''': ''Ammotragus lervia'') d yiwen n [[talmest|telmest]] n [[Tifunasiyin|ifunasen]] yeṭṭafaren [[adu-twacult]] n [[Tiɣɣaṭin|tiɣeṭṭen]], Yettidir deg idurar [[taneẓruft|ineẓrafen]] n [[Tafriqt n Ugafa|Tefriqt ugafa]] (s anẓul n idurar n w[[aṭlas aneẓraf]]), Tissi-ynes (lqedd-is) d amnummsan ur yugar ara 1,70 cm ma d [[azuk]]-is gar n 40 ar 145 kg i [[awtem|wewtem]] amawaṭ. Ma d tiddi n  [[tawtemt|tewtemt]] ur tettugar ara 84 cm 
+'''Udad''' ('''[[Assaɣ ussnan]]''': ''Ammotragus lervia'') d yiwen n [[talmest|telmest]] n [[Tifunasiyin|ifunasen]] yeṭṭafaren [[adu-twacult]] n [[Tiɣɣaṭin|tiɣeṭṭen]], Yettidir deg idurar [[taneẓruft|ineẓrafen]] n [[Tafriqt n Ugafa|Tefriqt ugafa]] (s anẓul n idurar n w[[aṭlas aneẓraf]]), Tiddi-ynes (lqedd-is) d amnummsan ur yugar ara 1,70 cm ma d [[azuk]]-is gar n 40 ar 145 kg i [[awtem|wewtem]] amawaṭ. Ma d tiddi n  [[tawtemt|tewtemt]] ur tettugar ara 84 cm
+
+== Amawal == 
+Deg yakk [[tutlayin timaziɣin]] isem-is '''Udad''' maca awal-a ila  daɣen sin n inumak iden: '''Afuctal''' d '''Afital'''
+
+== Ideggan n tudert ==
+Udad d aɣersiw yettwaggzen s umihi aẓaran deg tmura-ynes tiẓaranin 
+ ([[Tamazɣa|Tamazɣa]]) am [[Ameṛṛuk|Umeṛṛuk]] d [[Lezzayer]]  d [[Libya]] d [[Nnijer]] maca iga d [[talmest tamekcumt]] deg [[Spanya]] d [[Iwunak Yeddukklen n Temrikt]]
+
+== Tidu-lmasin ==
+
+== Udad deg yidles Amaziɣ ==
 
 == Amawal ==
 Deg yakk 
