--- a/Udad.mw
+++ b/Udad.mw
@@ -3,6 +3,7 @@
 
 == Amawal == 
 Deg yakk [[tutlayin timaziɣin]] isem-is '''Udad''' maca awal-a ila  daɣen sin n inumak iden: '''Afuctal''' d '''Afital'''
+Udad ayẓiw (aɛezri) isem-is Amyan
 
 == Ideggan n tudert ==
 Udad d aɣersiw yettwaggzen s umihi aẓaran deg tmura-ynes tiẓaranin 
