--- a/Udad.mw
+++ b/Udad.mw
@@ -6,8 +6,7 @@ Deg yakk [[tutlayin timaziɣin]] isem-is '''Udad''' maca awal-a ila  daɣen sin 
 Udad ayẓiw (aɛezri) isem-is Amyan
 
 == Ideggan n tudert ==
-Udad d aɣersiw yettwaggzen s umihi aẓaran deg tmura-ynes tiẓaranin 
- ([[Tamazɣa|Tamazɣa]]) am [[Ameṛṛuk|Umeṛṛuk]] d [[Lezzayer]]  d [[Libya]] d [[Nnijer]] maca iga d [[talmest tamekcumt]] deg [[Spanya]] d [[Iwunak Yeddukklen n Temrikt]]
+Udad d aɣersiw yettwaggzen s umihi deg tmura-ynes tiẓaranin ([[Tamazɣa|Tamazɣa]]) am [[Ameṛṛuk|Umeṛṛuk]] d [[Lezzayer]]  d [[Libya]] d [[Nnijer]] maca iga d [[talmest tamekcumt]] deg [[Spanya]] d [[Iwunak Yeddukklen n Temrikt]]
 
 == Tidu-lmasin ==
 
