*Empty MediaWiki Message*

--- a/Aselway_n_tegduda_tatunsit.mw
+++ b/Aselway_n_tegduda_tatunsit.mw
@@ -10,17 +10,17 @@
 Burgiba dɣa Ben Ɛli sselwayen daɣen akabar deg udabu, yettwasemman [[Amay-Dustuṛ]], [[Akabar anemlay adustuṛi]] dɣa [[Amsegraw amenḍawan amagday]], seg azarug deg useggas [[1956]] ar tagrawla n [[2011]].
 
 == Taneṣlit ==
-Akabar amezwaru [[Taɣelnaẓri|aɣelnaẓri]], [[Dustuṛ]], yettwassebdeden deg useggas [[1920]]<ref>{{fr}} [http://books.google.com/books?id=nKmGOCSf5S8C&pg=PA228&dq=destour+1920&hl=fr&ei=1G80TaeLOYn5sgbToaiNCg&sa=X&oi=book_result&ct=result&resnum=5&ved=0CDYQ6AEwBA#v=onepage&q=destour%201920&f=false Michel Camau d Vincent Geisser, ''Ḥabib Burgiba : adriz n tukkest'', éd. Karthala, Paris, 2004, p. 228]</ref> yebɣa yakan asaselgam n yiwet [[tamenḍawt]] id tḍwelen ar [[tanaya]] timeẓwit dɣa imenzayen n udabu amagday war ad ḍḍesen ar umenzay n [[tagelda]]. Akkw am [[Amay-Dustuṛ]] yexeddmen agzam deg useggas [[1934]] ddaw tamehla n [[Ḥabib Burgiba]], yettkemmel ad yessenfali tabbanit ines i unhil yellan deg tawuri<ref name="realites3">Ḥatem Ben Ɛaziza, « Seg tagelda tamenḍawant ar Tagduda », ''Réalités'', n°762, 27 yulyu 2000</ref>. Aswir n Umay-Dustuṛ yellan di [[Sfax]] seg [[15 wamber|15]] ar 18 wamber 1955<ref>Jacques Simon, ''Lezzayer. Izri, Lezzayer taṛumit, tagrawla (1954-1958)'', éd. L’Harmattan, Paris, p. 286 {{ISBN|2296028586}}</ref> yesnezgem : {{Début citation}}Ilaq ad xeddmen s tuɛjilt tifranin timuta timagdayin i timdinin dɣa i [[Agraw ismatteran atunsi n 1956|agraw ismatteran]] ad yessebdeden tamenḍawt ad yefken tabadut i unhil anabḍan n tamurt ɣef llsas n [[tagelda tamenḍawant]], slan-d ay d agdud iman-is id taɣbalut n tanaya id yettexdem sɣur amni yetwassuddesen s ugraw awḥid yettwafrenen deg ufran ameɣradi srid deg uqader n umenzay n [[amsebḍu n iduba|umsebḍu n iduba]] amsaḍuf, aselkam d aɣedman<ref name="realites3"/>.{{Fin citation}}
+Akabar amezwaru [[Taɣelnaẓri|aɣelnaẓri]], [[Dustuṛ]], yettwassebdeden deg useggas [[1920]]<ref>{{fr}} [http://books.google.com/books?id=nKmGOCSf5S8C&pg=PA228&dq=destour+1920&hl=fr&ei=1G80TaeLOYn5sgbToaiNCg&sa=X&oi=book_result&ct=result&resnum=5&ved=0CDYQ6AEwBA#v=onepage&q=destour%201920&f=false Michel Camau d Vincent Geisser, ''Ḥabib Burgiba : adriz n tukkest'', éd. Karthala, Paris, 2004, p. 228]</ref> yebɣa yakan asaselgam n yiwet [[tamenḍawt]] id tḍwelen ar [[tanaya]] timeẓwit dɣa imenzayen n udabu amagday war ad ḍḍesen ar umenzay n [[tagelda]]. Akkw am [[Amay-Dustuṛ]] yexeddmen agzam deg useggas [[1934]] ddaw tamehla n [[Ḥabib Burgiba]], yettkemmel ad yessenfali tabbanit ines i unhil yellan deg tawuri<ref name="realites3">Ḥatem Ben Ɛaziza, « Seg tagelda tamenḍawant ar Tagduda », ''Réalités'', n°762, 27 yulyu 2000</ref>. Aswir n Umay-Dustuṛ yellan di [[Sfax]] seg [[15 wamber|15]] ar 18 wamber 1955<ref>Jacques Simon, ''Lezzayer. Izri, Lezzayer taṛumit, tagrawla (1954-1958)'', éd. L’Harmattan, Paris, p. 286 {{ISBN|2296028586}}</ref> yesnezgem : {{Cquote|Ilaq ad xeddmen s tuɛjilt tifranin timuta timagdayin i timdinin dɣa i [[Agraw ismatteran atunsi n 1956|agraw ismatteran]] ad yessebdeden tamenḍawt ad yefken tabadut i unhil anabḍan n tamurt ɣef llsas n [[tagelda tamenḍawant]], slan-d ay d agdud iman-is id taɣbalut n tanaya id yettexdem sɣur amni yetwassuddesen s ugraw awḥid yettwafrenen deg ufran ameɣradi srid deg uqader n umenzay n [[amsebḍu n iduba|umsebḍu n iduba]] amsaḍuf, aselkam d aɣedman<ref name="realites3"/>.}}
 
 [[Tugna:Lamine Bey & Bourgiba.jpg|left|thumb|[[Ṭaher Ben Aɛmmar]] s Lamine Bey d Ḥabib Burgiba deg useggas 1955.]]
 
-Ɣef afermes n unhil sɣur amezdaɣ, Muḥsen Tumi yura : {{Début citation}}Ameslay ɣef tagelda, d timenna n bezzaf. [[Iḥusiniyen|Tamɣarit taḥusinit]] d tiwaculin n isenbaren i zzin ɣur-es, s laṣel aṭerki am nettat (deg tilawt, d iderfiyen iqedcen i [[Amenkud aɛetmani|Amenkud aɛetmani]] am aken nejlan ar tilisa n utaram) ur d ttwaɛqilen ara deg tmurt nni dɣa tamurt ur d ttwaɛqel ara deg « imamaden » agi n tiwsiyin i zemren ad siwelen i ignan ibeṛṛaniyen iwakken ad ssensen tinekriwin. Imeggufsa, imenhawen dɣa imwaryasen, d nitni akkw d iqriben nsen yellan deg taneṣlit n tasehrest taṛumit (tafṛensist) dɣa ḥebsen akken i zemren tikli ɣer uzarug<ref name="realites3"/>.{{Fin citation}}
+Ɣef afermes n unhil sɣur amezdaɣ, Muḥsen Tumi yura : {{Cquote|Ameslay ɣef tagelda, d timenna n bezzaf. [[Iḥusiniyen|Tamɣarit taḥusinit]] d tiwaculin n isenbaren i zzin ɣur-es, s laṣel aṭerki am nettat (deg tilawt, d iderfiyen iqedcen i [[Amenkud aɛetmani|Amenkud aɛetmani]] am aken nejlan ar tilisa n utaram) ur d ttwaɛqilen ara deg tmurt nni dɣa tamurt ur d ttwaɛqel ara deg « imamaden » agi n tiwsiyin i zemren ad siwelen i ignan ibeṛṛaniyen iwakken ad ssensen tinekriwin. Imeggufsa, imenhawen dɣa imwaryasen, d nitni akkw d iqriben nsen yellan deg taneṣlit n tasehrest taṛumit (tafṛensist) dɣa ḥebsen akken i zemren tikli ɣer uzarug<ref name="realites3"/>.}}
  
-Ihi, imi id yettwakmer kan id yezmel [[Lamine Bey]] ass n 29 dujamber 1955 tanaḍt id yesawelen ar tafrent n [[Agraw ismatteran atunsi n 1956|Ugraw ismatteran]]<ref name="realites3"/>{{,}}<ref>Fayçal Cherif, « Ussan ineggura n tagelda », ''Réalités'', n°1126, 26 yulyu 2007</ref>. Mɣar sakkin azarug d tafrent n Ugraw, tanarit tasertayt n Amay-Dustuṛ yessegrew ass n 10 yebrir 1956 yeḥettem agellid ad as yinni i Burgiba ad yessileɣ anabaḍ amezwaru n Tunes tazarugt. Ihi Burgiba yeddem amazrar n isuḍaf am taggara n iglamen n tawacult taḥusinit (tanaḍt n 31 mayyu 1956)<ref name="silvera p378">Victor Silvera, « Anhil amenḍawan n Tunes : Tamenḍawt n 1 yunyu 1959 », ''Revue française de science tasertit'', 1960, vol. 10, n°2, p. 378</ref> neɣ tadbelt n taɣult tusligt n umuɣ aɣarim n bey (amarud amseggas id ttwafken i akkw imaslaḍen n tawacult tabeylikalt (taɛetmanit)) daɣen taɣult n uqacuc sɣur yiwen anedbal yetxeddmen deg [[Aɣlif n teẓraf (Tunes)|aɣlif n teẓraf]]. [[Charles Debbasch]] yura ɣef waya : {{Début citation}}Imḍebbren n Amay-Dustuṛ fehmen cwit cwit belli tilint n bey ar uqerru n Uwanak d iɣiz ar umenzay n tadukli. Cwit cwit, iɣellaten n ukabar amay-adustuṛi ssenqesen akkw lfaydat tiɛetmaniyin, d-acu ihi d nnfeɛ n bey, acku netta mačči d amay-adustuṛi ?<ref name="realites3"/>.{{Fin citation}}
+Ihi, imi id yettwakmer kan id yezmel [[Lamine Bey]] ass n 29 dujamber 1955 tanaḍt id yesawelen ar tafrent n [[Agraw ismatteran atunsi n 1956|Ugraw ismatteran]]<ref name="realites3"/>{{,}}<ref>Fayçal Cherif, « Ussan ineggura n tagelda », ''Réalités'', n°1126, 26 yulyu 2007</ref>. Mɣar sakkin azarug d tafrent n Ugraw, tanarit tasertayt n Amay-Dustuṛ yessegrew ass n 10 yebrir 1956 yeḥettem agellid ad as yinni i Burgiba ad yessileɣ anabaḍ amezwaru n Tunes tazarugt. Ihi Burgiba yeddem amazrar n isuḍaf am taggara n iglamen n tawacult taḥusinit (tanaḍt n 31 mayyu 1956)<ref name="silvera p378">Victor Silvera, « Anhil amenḍawan n Tunes : Tamenḍawt n 1 yunyu 1959 », ''Revue française de science tasertit'', 1960, vol. 10, n°2, p. 378</ref> neɣ tadbelt n taɣult tusligt n umuɣ aɣarim n bey (amarud amseggas id ttwafken i akkw imaslaḍen n tawacult tabeylikalt (taɛetmanit)) daɣen taɣult n uqacuc sɣur yiwen anedbal yetxeddmen deg [[Aɣlif n teẓraf (Tunes)|aɣlif n teẓraf]]. [[Charles Debbasch]] yura ɣef waya: {{Cquote|Imḍebbren n Amay-Dustuṛ fehmen cwit cwit belli tilint n bey ar uqerru n Uwanak d iɣiz ar umenzay n tadukli. Cwit cwit, iɣellaten n ukabar amay-adustuṛi ssenqesen akkw lfaydat tiɛetmaniyin, d-acu ihi d nnfeɛ n bey, acku netta mačči d amay-adustuṛi ?<ref name="realites3"/>.}}
 
 [[Tugna:Ahmed Bensalah.jpg|thumb|[[Ahmed Ben Salah]] yenṭeqed inaw.]]
 
-I lmend n umulli wis sin n tuqqla ines ar Tunes, ass n 1 yunyu 1957, [[Ḥabib Burgiba]] yebɣa ad yesseɣret Tagduda, maca tazɣint n assaɣen iṛumiyen-itunsiyen id yussan seg uḥbas n tallalt n teẓraf n Fransa, yetwexxer tadyant<ref name="silvera p378"/>. Ass n {22 yulyu]], tanarit tasertayt n Amay-Dustuṛ tesseɣret taseɣra n imazanen n Agraw ismatteran ar tiɣimit tafeɣnamit yettwassuddsen ass n [[25 yulyu]]<ref name="martel69">Pierre-Albin Martel, ''Ḥabib Burgiba. Argaz, timiḍi'', éd. du Jaguar, Paris, 1999, p. 69</ref>. Tiɣimit tebedda af 9 h 23 deg tazeɣɣa n usgeld n leqṣer n [[Le Bardo|Bardo]] ddaw taselwit n Ǧelluli Fares d tihawt n tafekka tadiplumatit<ref name="realites2">« 25 yulyu 1957. Dɣa Burgiba yessebded Tagduda », ''Réalités'', n°917, 24 yulyu 2003</ref>. Aneɣlaf amezwaru Ḥabib Burgiba d imaslaḍen n unabaḍ ines, slid [[Becir Ben Yahmed]] ur llan ara d awamni, qqimen ɣef uɣalad n imaslaḍen. Imi-d yeldi tiɣimit, Fares yederrer belli imaslaḍen ilaq ad innin anta talɣa is ilaqen i unhil. [[Ahmed Ben Salah]], anmazul n uselway n Ugraw, yenna-d tidmi ines akagi : {{Début citation}}Ilaq Awanak ad yessderfi seg uzaglu id yewṛet seg izri, waya yezmer kan ad yesmuḍḍef azarug n tmurt dɣa tanaya n ugdud atunsi. Ulac ccek, an ili ass agi nerẓem seg izemmal n unhil aqdim. Ur yezmir ad yili agellid deg tamurt agi, dɣa lebɣi n ugdud d uɣris. Tasuta nneɣ tettweṛebbi deg usekkud n Amay-Dustuṛ, tebɣa tilelli, talwit d lehna. Ilaq an faṛes s tanaya nneɣ tuɣridt dɣa war abeḍḍu. Imi yella imenɣi, nella yakan ddaw anhil agdudan, acku deg tallit nni, llant snat timura Tunes, yiwet tasugnant, tayeḍ n tidet. Tagduda tella yakan di Tunes ddaw tawaralgamit ; ilaq-aɣ ass agi at-id-n ssuḍef<ref name="realites2"/>.{{Fin citation}} Awalen agi ttwasergegen sɣur tigermanin tidfirin. Af 15 h 30, Burgiba yebeḍḍa aẓmaẓ anarray n umnakel n [[Bey n Tunes (tamaneɣt)|beys]], yerduten af ddell d taxendallast. Yeffuk deg tagara s taseɣrut n Tagduda : {{Début citation}}Agdud atunsi yegwed ar tafesna n tananya tamsewdagt iwakken ad yaɣ assefrek n iweẓla ines. Ẓriɣ acḥal yeḥmmel iyi. Kra snezgemen zemreɣ ad cceɣleɣ i lmektub ines (n Tunes). Maca aqader i sɛiɣ i ugdud atunsi d ameqran armi ur bɣiɣ ara ad yesɛu akerwa dɣa yella yiwen afran kan i zemreɣ ad-as-efkeɣ, d win n Tagduda<ref name="martel69"/>.{{Fin citation}} Deg taggara, afran s unemzel yeser anhil ageldan aqdim 252 iseggasen dɣa yessebded [[Tagduda|anhil agdudan]]<ref>{{fr}} [http://www.ina.fr/video/AFE85007495/proclamation-de-la-republique-en-tunisie.fr.html « Proclamation de la République en Tunes », ''Les Actualités françaises'', 31 yulyu 1957]</ref> yersan ɣef Amay-Dustuṛ kan<ref>Marguerite Rollinde, ''Le mouvement marocain des droits de l’homme : entre consensus national et engagement citoyen'', éd. Karthala, Paris, 2002, p. 108 {{ISBN|2845862091}}</ref>. Aylaten n bey ttwakksen-as dɣa ṣleḥen i urẓam n umerwas n Uwanak<ref>{{fr}} [http://fr.encarta.msn.com/encyclopedia_761568505_6/Tunes.html Article sur la Tunes (Encarta)]</ref>. Burgiba yekcem srid deg tiwura-s n uselway deg timeṛjiwt n tirawt n Tamenḍawt id effken sin iseggasen sakkin tumast taselwayant n unhil amaynu.
+I lmend n umulli wis sin n tuqqla ines ar Tunes, ass n 1 yunyu 1957, [[Ḥabib Burgiba]] yebɣa ad yesseɣret Tagduda, maca tazɣint n assaɣen iṛumiyen-itunsiyen id yussan seg uḥbas n tallalt n teẓraf n Fransa, yetwexxer tadyant<ref name="silvera p378"/>. Ass n {22 yulyu]], tanarit tasertayt n Amay-Dustuṛ tesseɣret taseɣra n imazanen n Agraw ismatteran ar tiɣimit tafeɣnamit yettwassuddsen ass n [[25 yulyu]]<ref name="martel69">Pierre-Albin Martel, ''Ḥabib Burgiba. Argaz, timiḍi'', éd. du Jaguar, Paris, 1999, p. 69</ref>. Tiɣimit tebedda af 9 h 23 deg tazeɣɣa n usgeld n leqṣer n [[Le Bardo|Bardo]] ddaw taselwit n Ǧelluli Fares d tihawt n tafekka tadiplumatit<ref name="realites2">« 25 yulyu 1957. Dɣa Burgiba yessebded Tagduda », ''Réalités'', n°917, 24 yulyu 2003</ref>. Aneɣlaf amezwaru Ḥabib Burgiba d imaslaḍen n unabaḍ ines, slid [[Becir Ben Yahmed]] ur llan ara d awamni, qqimen ɣef uɣalad n imaslaḍen. Imi-d yeldi tiɣimit, Fares yederrer belli imaslaḍen ilaq ad innin anta talɣa is ilaqen i unhil. [[Ahmed Ben Salah]], anmazul n uselway n Ugraw, yenna-d tidmi ines akagi : {{Cquote|Ilaq Awanak ad yessderfi seg uzaglu id yewṛet seg izri, waya yezmer kan ad yesmuḍḍef azarug n tmurt dɣa tanaya n ugdud atunsi. Ulac ccek, an ili ass agi nerẓem seg izemmal n unhil aqdim. Ur yezmir ad yili agellid deg tamurt agi, dɣa lebɣi n ugdud d uɣris. Tasuta nneɣ tettweṛebbi deg usekkud n Amay-Dustuṛ, tebɣa tilelli, talwit d lehna. Ilaq an faṛes s tanaya nneɣ tuɣridt dɣa war abeḍḍu. Imi yella imenɣi, nella yakan ddaw anhil agdudan, acku deg tallit nni, llant snat timura Tunes, yiwet tasugnant, tayeḍ n tidet. Tagduda tella yakan di Tunes ddaw tawaralgamit ; ilaq-aɣ ass agi at-id-n ssuḍef<ref name="realites2"/>.}} Awalen agi ttwasergegen sɣur tigermanin tidfirin. Af 15 h 30, Burgiba yebeḍḍa aẓmaẓ anarray n umnakel n [[Bey n Tunes (tamaneɣt)|beys]], yerduten af ddell d taxendallast. Yeffuk deg tagara s taseɣrut n Tagduda: {{Cquote|Agdud atunsi yegwed ar tafesna n tananya tamsewdagt iwakken ad yaɣ assefrek n iweẓla ines. Ẓriɣ acḥal yeḥmmel iyi. Kra snezgemen zemreɣ ad cceɣleɣ i lmektub ines (n Tunes). Maca aqader i sɛiɣ i ugdud atunsi d ameqran armi ur bɣiɣ ara ad yesɛu akerwa dɣa yella yiwen afran kan i zemreɣ ad-as-efkeɣ, d win n Tagduda<ref name="martel69"/>.}} Deg taggara, afran s unemzel yeser anhil ageldan aqdim 252 iseggasen dɣa yessebded [[Tagduda|anhil agdudan]]<ref>{{fr}} [http://www.ina.fr/video/AFE85007495/proclamation-de-la-republique-en-tunisie.fr.html « Proclamation de la République en Tunes », ''Les Actualités françaises'', 31 yulyu 1957]</ref> yersan ɣef Amay-Dustuṛ kan<ref>Marguerite Rollinde, ''Le mouvement marocain des droits de l’homme : entre consensus national et engagement citoyen'', éd. Karthala, Paris, 2002, p. 108 {{ISBN|2845862091}}</ref>. Aylaten n bey ttwakksen-as dɣa ṣleḥen i urẓam n umerwas n Uwanak<ref>{{fr}} [http://fr.encarta.msn.com/encyclopedia_761568505_6/Tunes.html Article sur la Tunes (Encarta)]</ref>. Burgiba yekcem srid deg tiwura-s n uselway deg timeṛjiwt n tirawt n Tamenḍawt id effken sin iseggasen sakkin tumast taselwayant n unhil amaynu.
 
 === Amezruy Afranan ===
 
