*Empty MediaWiki Message*

--- a/Aselway_n_tegduda_tatunsit.mw
+++ b/Aselway_n_tegduda_tatunsit.mw
@@ -1,4 +1,4 @@
-'''Aselway n Tagduda tatunsit''' d [[Aɣella n Uwanak|aɣella n Uwanak]] n [[Tunes|Tagduda tatunsit]] seg assebded n tawuri ass n 25 yulyu 1957. Deg uzwel agi, yeḍebber [[adabu aselkam]] s [[Anabaḍ n Tunes|unabaḍ]] yetsselwayen sɣur [[Aɣella n unabaḍ atunsi|aɣella n unabaḍ]]. Ɣef leḥsab n umagrad 77 n [[Tamenḍawt tatunsit n 2014|Tamenḍawt]] [[Tagduda|tagdudant]] n wass n 10 fuṛaṛ 2014, yeḍebber daɣen anzaḍ aɛlayan n [[Tidusiyin yettwassemregen titunsiwin|tidusiyin yettwassemregen]].
+'''Aselway n tegduda tatunsit''' d [[Aɣella n Uwanak|aɣella n Uwanak]] n [[Tunes|Tagduda tatunsit]] seg assebded n tawuri ass n 25 yulyu 1957. Deg uzwel agi, yeḍebber [[adabu aselkam]] s [[Anabaḍ n Tunes|unabaḍ]] yetsselwayen sɣur [[Aɣella n unabaḍ atunsi|aɣella n unabaḍ]]. Ɣef leḥsab n umagrad 77 n [[Tamenḍawt tatunsit n 2014|Tamenḍawt]] [[Tagduda|tagdudant]] n wass n 10 fuṛaṛ 2014, yeḍebber daɣen anzaḍ aɛlayan n [[Tidusiyin yettwassemregen titunsiwin|tidusiyin yettwassemregen]].
 
 Ɣef leḥsab n Tamenḍawt, yetwafren s [[afran ameɣradi]] srid i anna n semmus iseggasen, ayzmaynu yiwet tikkelt kan. Seg assebded n tawuri, aten-id wid yeṭṭfen amkan nni :
 * [[Ḥabib Burgiba]], armi i tid stixeren ass n 7 wamber 1987 sakkin kraḍt n tmerwin n udabu (ɣef ljal n uddad ines n tadawsa, aseqqamu n imsujjiyen yenna-d, ur yezmer ara ad yekemmel deg tiwura ines) ;
