--- a/Kenza_Faraḥ.mw
+++ b/Kenza_Faraḥ.mw
@@ -1,7 +1,15 @@
 {{Databox}}
-'''Kenza faraḥ''', d tacennayt [[Iqbayliyen|Taqbaylit]] , tlut ass n 8 yulyu 1986 deg [[Bgayet]], tcennu '''RnB''', '''hip-hop''' akked '''pop''' s [[Tafransist|tutlayt tafṛansist]].<br>
+'''Kenza faraḥ''', d [[Acennay|tacennayt]] [[Iqbayliyen|Taqbaylit]] , tlut ass n 8 yulyu 1986 deg [[Bgayet]], tcennu '''RnB''', '''hip-hop''' akked '''pop''' s [[Tafransist|tutlayt tafṛansist]].<br>
 Seg [[2007]] ɣer [[2012]] , Kenza faraḥ tezzenz ugar n 500 000 n yiḍebsiyen.
 
 ==Tameddurt==
+Kenza Faraḥ Maɛuc, tekker-d deg wasun wis 15 deg yizenqan n ugafa n [[Marsey|temdint n Marsey]], tebda txeddem timeɣriwin timecṭaḥ deg yizenqan, tettekki deg temzazzalin n ccna deg yixxamen n yilmeẓyen, atg. Sakkin Kenza Faraḥ Maɛuc temlal-d akked emfarasen i s-yefkan tagnitt ad tessekles kra n yeḥricen n tezlatin deg ustudyu am ''Mon ange'', '' Trésor'' akked '' Il m'a trahie''.<br>
+Anect-a yerra-d tamuɣli n yemdanen ɣer tama-s, d acu i tt-yeǧǧan testenya ɣef usufeɣ n yiwen n walbum deg ctamber [[2006]].
 
 ==Albumen==
+
+==Aḍebsaru==
+
+[[Taggayt:Talalit deg yulyu 1986|Kenza faraḥ]]
+[[Taggayt:Talalit n 1986|Kenza faraḥ]]
+[[Taggayt:Icennayen iqbayliyen]]
