--- a/Kenza_Faraḥ.mw
+++ b/Kenza_Faraḥ.mw
@@ -3,7 +3,7 @@
 Seg [[2007]] ɣer [[2012]] , Kenza faraḥ tezzenz ugar n 500 000 n yiḍebsiyen.
 
 ==Tameddurt==
-Kenza Faraḥ Maɛuc, tekker-d deg wasun wis 15 deg yizenqan n ugafa n [[Marsey|temdint n Marsey]], tebda txeddem timeɣriwin timecṭaḥ deg yizenqan, tettekki deg temzazzalin n ccna deg yixxamen n yilmeẓyen, atg. Sakkin Kenza Faraḥ Maɛuc temlal-d akked yemfarasen i s-yefkan tagnitt ad tessekles kra n tezlatin deg ustudyu, gar-asent ''Mon ange'' (lmalayel-iw), '' Trésor'' (agerruj) akked '' Il m'a trahie'' (yexdeɛ-iyi).<br>
+Kenza Faraḥ Maɛuc, tekker-d deg wasun wis 15 deg yizenqan n ugafa n [[Marsey|temdint n Marsey]], tebda txeddem timeɣriwin timecṭaḥ deg yizenqan, tettekki deg temzazzalin n ccna deg yixxamen n yilmeẓyen, atg. Sakkin Kenza Faraḥ Maɛuc temlal-d akked yemfarasen i s-yefkan tagnitt ad tessekles kra n tezlatin deg ustudyu, gar-asent: ''Mon ange'' (lmalayek-iw); ''Trésor'' (agerruj) akked '' Il m'a trahie'' (yexdeɛ-iyi).<br>
 Anect-a yerra-d tamuɣli n yemdanen ɣer tama-s, d acu i tt-yeǧǧan testenya ɣef usufeɣ n yiwen n walbum deg ctamber [[2006]].
 
 ==Albumen==
