*Empty MediaWiki Message*

--- a/Kenza_Faraḥ.mw
+++ b/Kenza_Faraḥ.mw
@@ -1,6 +1,6 @@
 {{Databox}}
-'''Kenza faraḥ''', d [[Acennay|tacennayt]] [[Iqbayliyen|Taqbaylit]] , tlut ass n 8 yulyu 1986 deg [[Bgayet]], tcennu '''RnB''', '''hip-hop''' akked '''pop''' s [[Tafransist|tutlayt tafṛansist]].<br>
-Seg [[2007]] ɣer [[2012]] , Kenza faraḥ tezzenz ugar n 500 000 n yiḍebsiyen.
+'''Kenza Faraḥ''', d [[Acennay|tacennayt]] [[Iqbayliyen|taqbaylit]], tlul ass n 8 yulyu 1986 deg [[Bgayet]], tcennu '''RnB''', '''hip-hop''' akked '''pop''' s [[Tafransist|tutlayt tafṛansist]].<br>
+Seg [[2007]] ɣer [[2012]], Kenza faraḥ tezzenz ugar n 500 000 n yiḍebsiyen.
 
 ==Tameddurt==
 Kenza Faraḥ Maɛuc, tekker-d deg wasun wis 15 deg yizenqan n ugafa n [[Marsey|temdint n Marsey]], tebda txeddem timeɣriwin timecṭaḥ deg yizenqan, tettekki deg temzazzalin n ccna deg yixxamen n yilmeẓyen, atg. Sakkin Kenza Faraḥ Maɛuc temlal-d akked yemfarasen i s-yefkan tagnitt ad tessekles kra n tezlatin deg ustudyu, gar-asent: ''Mon ange'' (lmalayek-iw); ''Trésor'' (agerruj) akked '' Il m'a trahi'' (yexdeɛ-iyi).<br>
