*Empty MediaWiki Message*

--- a/Asif.mw
+++ b/Asif.mw
@@ -1,4 +1,4 @@
-[[Tugna:MariaValeriaBridge.jpg|thumb|250px|Asif gar n Slovakia d Hungarian]]
+[[Tugna:MariaValeriaBridge.jpg|thumb|Asif gar n Slovakia d Hungarian]]
 
 '''Asif''' ([[Asget]]: '''isafen''') d amsizel n [[aman|waman]] [[agama|agaman]], Hraw yerna ɣezzif ttazalen dges waman id yettasen seg [[ageffur|ugeffur]] d [[Adfel|wedfel]] neɣ aman id yettali seg [[aɣbalu (aman)|iɣbula]] d [[agelmim (ademkal)|igelmimen]], Dɣa aman n wasif tefakkan tikliwin-nsen deg ayen umi qqaren [[asafi]] send ma ad kecmen ar [[ilel|yilel]] neɣ [[agaraw]]
 
