--- a/Montsoreau.mw
+++ b/Montsoreau.mw
@@ -1,7 +1,7 @@
 {{infobox city}}
 [[File:Most beautiful villages of the world montsoreau 2.jpg|thumb|Montsoreau]]
 
-Montsoreau d tamdint n [[Fransa]], n [[Maine-et-Loire]]. Zedɣen-tt 447 n yimezdaɣen.
+'''Montsoreau''' d tamdint n tmurt n [[Fransa]], tezga-d deg deg twilayt n [[Maine-et-Loire]]. Zedɣen-tt 447 n yimezdaɣen (aseggas n 2015).
 
 <center>'''Chart of population development in Montsoreau'''<ref name="fcass">{{Cite web|url=http://cassini.ehess.fr/cassini/fr/html/fiche.php?select_resultat=23896|title=Des villages de Cassini aux communes d'aujourd'hui|work =École des hautes études en sciences sociales}}</ref><ref>{{Cite web|url=https://www.statistiques-locales.insee.fr/#c=indicator&i=bdcom.pop&s=2015&selcodgeo=49219&view=map1|title=Recensement de la population au 1er janvier 2006|work =Insee}}</ref><ref>{{Cite web|url=http://www.insee.fr/fr/ppp/bases-de-donnees/recensement/populations-legales/commune.asp?depcom=49007&annee=2009|title=Recensement de la population|work =Insee}}</ref><br></small>
 <timeline>
