*Empty MediaWiki Message*

--- a/Tiɣɣaṭin.mw
+++ b/Tiɣɣaṭin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tiɣɣaṭin''' ('''[[Assaɣ ussnan]]: ''Caprinae'') d yiwet n tegrawt n [[aɣersiw|iɣersiwen]] id yessiliɣen [[adu-twacult]] n [[Tifunasiyin|tfunasiyin]], Tettwasenmel-d sɣur [[John Edward Gray]] deg useggas n [[1821]]. S umata, Adu-twacult-a dges [[Amaɣaṭ]], [[izimer|izamaren]] d [[Acamwa|ucamwa]] 
+'''Tiɣɣaṭin''' ('''[[Assaɣ ussnan]]''': ''Caprinae'') d yiwet n tegrawt n [[aɣersiw|iɣersiwen]] id yessiliɣen [[adu-twacult]] n [[Tifunasiyin|tfunasiyin]], Tettwasenmel-d sɣur [[John Edward Gray]] deg useggas n [[1821]]. S umata, Adu-twacult-a dges [[Amaɣaṭ]], [[izimer|izamaren]] d [[Acamwa|ucamwa]]
 
 == Asru ==
 
