*Empty MediaWiki Message*

--- a/Jules_Verne.mw
+++ b/Jules_Verne.mw
@@ -3,7 +3,7 @@
 
 ==Ayen Yura==
 
-Deg 1863, Jules Verne yessuffeɣ-d ungal-is amezwaru "Xemsa n Ledwaṛ deg Ubalun", d win ay yeqqlen dindin mechuṛ ama deg Fransa, ama deg tmura niḍen. Jules Verne yeqqim yettaru azal n 40 n yiseggasen, yerna yessuffeɣ-d 64 n wungalen, gar-asen [[Arraw n Uqebṭan Grant]] (1868), [[Tuzzya ɣef Umaḍal deg 90 n wussan]] (1873), [[Michel Strogoff]] (1876), [[Itri n Wenẓul]] (1884), [[Seg Tegnit ɣer Wayyur]] (1865), 20.000 [[Yifersxen ddaw Yilel]] (1870), Robur ameslak (1886), atg.
+Deg 1863, Jules Verne yessuffeɣ-d ungal-is amezwaru "Xemsa n Ledwaṛ deg Ubalun", d win ay yeqqlen dindin mechuṛ ama deg Fransa, ama deg tmura niḍen. Jules Verne yeqqim yettaru azal n 40 n yiseggasen, yerna yessuffeɣ-d 64 n wungalen, gar-asen [[Arraw n Uqebṭan Grant]] (1868), [[Tuzzya ɣef Umaḍal deg 90 n wussan|Tuzzya ɣef Umaḍal deg 80 n wussan]] (1873), [[Michel Strogoff]] (1876), [[Itri n Wenẓul]] (1884), [[Seg Tegnit ɣer Wayyur]] (1865), 20.000 [[Yifersxen ddaw Yilel]] (1870), Robur ameslak (1886), atg.
 
 Idlisen n Jules Verne ttwassnen deg umaḍal akken ma yella, yerna ɣerna d netta ay d amaru afṛensis ay d-yettussuqqlen aṭas akk deg umaḍal.
 
