*Empty MediaWiki Message*

--- a/Acaddi.mw
+++ b/Acaddi.mw
@@ -2,7 +2,7 @@
 Yekka-d seg uẓar (DW), yemmal-d anamek n uɣersiw n lber (ibki). Ma d aslem-agi qqaren- as akka acku d aberkan am ucaddi n lber.  Acaddi d aslem bu yiɣes.Yesɛa deg teɣzi azal n yimi n wuccen (10 isuntimen).D aslem amecṭuḥ, maca yegget. Yesɛa snat n tferrawin sufella n uɛrur- is, snat niɣen deg yibeṛdiyen- is, ǧehdent mliḥ, yis- sent i yettɛummu. Yettili anda zeqqlit waman ɣer yiri n yilel, deg yixemǧan n yejdi, neɣ gar yeẓra.Ma d arraw yessefṛuṛux si 15000 armi d 20000 n tmellalin.Itett izelmamen, ijeɣlalen akked yibelɛac imecṭaḥ.
 
 == Ifurkawen ==
-{{Colonnes|nombre=4|
+{{Columns-list|
 * ''[[Aboma]]''
 * ''[[Acanthogobius]]''
 * ''[[Acentrogobius]]''
