*Empty MediaWiki Message*

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -1,4 +1,4 @@
-[[Tugna:Wikipedia-logo-v2.svg|thumb|150px|"Logo" n Wikipedia]]
+[[Tugna:(k.conk asicx)|thumb|150px|"Logo" n Wikipedia]]
 [[Tugna:Wikimedia-logo.svg|thumb|150px|"Logo" n [[Wikimedia Foundation]]]]
 <!--{{quote|Wikipedia, l'enciclopedia libera|Slogan di Wikipedia|Wikipedia, the Free Encyclopedia|lingua=en}}-->
 '''Wikipedia''' d [[tasanayt]] n weskar uqqin ''encyclopédie en ligne'', s waṭas n tutlayin ; ayen yella deg-s d ilelli, la ttarun deg-s imaɣzalen, ixeddemen am [[tiwizi]], tettall-itt [[Wikimedia Foundation]], d tuddsa [[non-profit]]. 
