/* Imeslayen ɣef Yennayer */

--- a/Asfugel_n_yennayer.mw
+++ b/Asfugel_n_yennayer.mw
@@ -98,7 +98,7 @@ Anda yedda Rebbi yella !</poem>
 
 == Imeslayen ɣef Yennayer ==
 
-{{Ameslay|Mebla Yennayer, ulac lehcaca di ddunnit ; imi d netta i-d-ittakken i wseggas arkad-is. D acu i-wumi yezmer wakal ma yella I luffeṛ d lxezna n waman : itteddu ar lmerta n ffad d-uḥaḍum yes d-uɣurar uqbel ad yemmet u ad iwali amek ttmettaten yidma-s. Aman d tudert. Ɣaf-aya i-d-yejna Ugellid Ameqqwran tameṭṭut tamezwarut si tiqit n nnda. Ɣaf-aya iqqaren Imezwura-nneɣ : nnda d tidi n Yennayer.|Yiwet n tmeṭṭut taqbaylit}}
+{{Quote|Mebla Yennayer, ulac lehcaca di ddunnit ; imi d netta i-d-ittakken i wseggas arkad-is. D acu i-wumi yezmer wakal ma yella I luffeṛ d lxezna n waman : itteddu ar lmerta n ffad d-uḥaḍum yes d-uɣurar uqbel ad yemmet u ad iwali amek ttmettaten yidma-s. Aman d tudert. Ɣaf-aya i-d-yejna Ugellid Ameqqwran tameṭṭut tamezwarut si tiqit n nnda. Ɣaf-aya iqqaren Imezwura-nneɣ : nnda d tidi n Yennayer.|Yiwet n tmeṭṭut taqbaylit}}
 
 ==  Amek i d-yettili usfuggel n Yennayer?  ==
 
