--- a/Asfugel_n_tefsut.mw
+++ b/Asfugel_n_tefsut.mw
@@ -13,11 +13,11 @@ Deg umenzu n tefsut, ttenkaren medden di tafrara akken ur yeggan ara sseɛd-nsen
 
 Tilawin d yigerdan ttarran tiɣrifin d tḍellaɛt, tteṭfen abrid ɣer lexlawi d tɣezza akken ad maggren tafsut. Ad leḥḥun ad cennun:
 
-{{Ameslay|Lɛeslama-m a tafsut,<br>Ad neǧuǧǧug ad nettkufut,<br>Ad nettnernay am tagut,<br>Di leɛnaya n Jebrayen lɣut.}}
+{{Quote|Lɛeslama-m a tafsut,<br>Ad neǧuǧǧug ad nettkufut,<br>Ad nettnernay am tagut,<br>Di leɛnaya n Jebrayen lɣut.}}
 
 Qqaren daɣen:
 
-{{Ameslay|Lɛeslama-m a tafsut,<br>A tin umi cebḥen lenwar!<br>Ma d ccetwa tfukk,<br>Truḥ am tagut la-qrar.}}
+{{Quote|Lɛeslama-m a tafsut,<br>A tin umi cebḥen lenwar!<br>Ma d ccetwa tfukk,<br>Truḥ am tagut la-qrar.}}
 
 Dinna di lexla, tilawin gemrent-d imɣan, igerdan tteksen-d tijeǧǧigin d texlulin. Kra seg yemɣan ad ten-sewwent d tiremt n wass-nni, kra niḍen ḥeǧǧbent-d yis-sen tistan akken ur asent-ittruḥu ara uyefki. Igerdan, ad ṭṭfen tixlulin-nni i d-kksen ad selfen yis-sent i wallen-nsen imir ad as-inin: {{Ameslay|Ur ttaḍnent wallen-nneɣ akken ttaḍnent texlulin n Nnbi. D tiṭ i kent-iwalan aseggas-a ara kent-iwalin qabel.}} Mi ɛyan di tikli d ccnawi d unecreḥ ad qqimen ad ččen tiɣrifin-nni ay uwin yid-sen. Imir ad d-uɣalen s axxam.
 
