--- a/Bill_Gates.mw
+++ b/Bill_Gates.mw
@@ -1,9 +1,9 @@
 {{Databox}}
-'''William Henry''' "'''Bill'''" '''Gates III''' (ilul-d ass n 28 tuber 1955) d amdan n iweẓla ameqran amarikani, imsefti, ameskar d amuhak.{{Sfn |Manes|1994| p =11}}<ref>{{cite web|title=Bill Gates (American computer programmer, businessman, and philanthropist)|url=http://www.britannica.com/EBchecked/topic/226865/Bill-Gates|accessdate=20 meɣres 2013}}</ref> Deg useggas 1975, Gates akkw d [[Paul Allen]] azdisbedden [[Microsoft]], id yuɣalen d taṛmist n iseɣẓanen i [[aselkim|iselkimen]] tameqrant ugaren tiyaḍ nniḍen deg umaḍal. Deg umecwaṛ ines ɣer Microsoft, Gates yeṭṭfed tanarit n uselway, aselway anemhal amatu (CEO) d [[amasdag n iseɣẓanen|aɣella amasdag n iseɣẓanen]], daɣen d netta yesɛan aṭas tafulin ugaren wiyaḍ nniḍen armi d mayyu 2014.<ref name="CNN Tech">{{cite news|title=Bill Gates no longer Microsoft's biggest shareholder |url=http://money.cnn.com/2014/05/02/technology/gates-microsoft-stock-sale/ |publisher=CNN Money |accessdate=22 ɣuct 2014 |last1=Sheridan |first1=Patrick |date=2 mayyu 2014}}</ref>{{Refn | group="lower-alpha" | Gates regularly documents his share ownership through public U.S. Securities and Exchange Commission [[form 4]] filings.<ref>{{Citation | title = MSFT | url = http://www.nasdaq.com/asp/holdings.asp?symbol=MSFT&selected=MSFT&FormType=form4 | publisher = NASDAQ | type = Holdings | accessdate = 10 yebrir 2016}}</ref><ref>{{Citation | title = MSFT | publisher = NASDAQ | type = Symbol | url = http://www.nasdaq.com/symbol/msft | accessdate = 10 yebrir 2016}}</ref>}} Gates has authored and co-authored several books.
+'''William Henry''' "'''Bill'''" '''Gates III''' (ilul-d ass n 28 tuber 1955) d amdan n iweẓla ameqran amarikani, imsefti, ameskar d amuhak.{{Sfn |Manes|1994| p =11}}<ref>{{cite web|title=Bill Gates (American computer programmer, businessman, and philanthropist)|url=http://www.britannica.com/EBchecked/topic/226865/Bill-Gates|accessdate=20 meɣres 2013}}</ref> Deg useggas 1975, Gates akked [[Paul Allen]] azdisbedden [[Microsoft]], id yuɣalen d taṛmist n iseɣẓanen i [[aselkim|iselkimen]] tameqqrant ugaren tiyaḍ nniḍen deg umaḍal. Deg umecwaṛ ines ɣer Microsoft, Gates yeṭṭf-d tanarit n uselway, aselway anemhal amatu (CEO) d [[amasdag n iseɣẓanen|aɣella amasdag n iseɣẓanen]], daɣen d netta yesɛan aṭas tafulin ugaren wiyaḍ nniḍen armi d mayyu 2014.<ref name="CNN Tech">{{cite news|title=Bill Gates no longer Microsoft's biggest shareholder |url=http://money.cnn.com/2014/05/02/technology/gates-microsoft-stock-sale/ |publisher=CNN Money |accessdate=22 ɣuct 2014 |last1=Sheridan |first1=Patrick |date=2 mayyu 2014}}</ref>{{Refn | group="lower-alpha" | Gates regularly documents his share ownership through public U.S. Securities and Exchange Commission [[form 4]] filings.<ref>{{Citation | title = MSFT | url = http://www.nasdaq.com/asp/holdings.asp?symbol=MSFT&selected=MSFT&FormType=form4 | publisher = NASDAQ | type = Holdings | accessdate = 10 yebrir 2016}}</ref><ref>{{Citation | title = MSFT | publisher = NASDAQ | type = Symbol | url = http://www.nasdaq.com/symbol/msft | accessdate = 10 yebrir 2016}}</ref>}} Gates has authored and co-authored several books.
 
-Seg useggwas 1987, Bill Gates yekcem deg [[The World's Billionaires|wumuɣ ''Forbes'' n imdanen inesbuɣar ugaren wiyaḍ nniḍen]]<ref>{{cite news|url= http://www.reuters.com/article/rbssTechMediaTelecomNews/idUSN1748882920080917 |title= Bill Gates tops US wealth list 15 years continuously |first= Phil | last= Wahba | date = September 17, 2008 |accessdate= November 6, 2008 |agency= Reuters  |archiveurl = http://www.reuters.com/article/rbssTechMediaTelecomNews/idUSN1748882920080917 |archivedate = September 16, 2012}}</ref> daɣen d netta yella d amdan anesbaɣur ugaren wiyaḍ nniḍen gar 1995 d 2007, daɣen tikkelt nniḍen deg useggwas 2009, daɣen seg 2014.<ref name="Forbes profile">{{Citation | type = profile |  url = http://www.forbes.com/profile/bill-gates/ | title = William 'Bill' Gates | journal = Forbes | accessdate = December 2014}}</ref> Gar 2009 d 2014, tabaɣurt ines t-ulli seg {{USD}}40&nbsp;imelyaṛen ar ugar n {{USD}}82&nbsp;imelyaṛen.<ref>{{cite web|title=The World's Billionaires|work=Forbes|url=http://www.forbes.com/billionaires/|accessdate=30 wamber 2014}}</ref> Gar 2013 d 2014, tabaɣurt ines terna s {{USD}}15&nbsp;imelyaṛen.<ref name="imf2">{{cite web|url = http://www.imf.org/external/pubs/ft/weo/2014/02/weodata/weorept.aspx?pr.x=57&pr.y=8&sy=2012&ey=2019&scsm=1&ssd=1&sort=country&ds=.&br=1&c=176&s=NGDP_R%2CNGDP_RPCH%2CNGDP%2CNGDPD%2CNGDP_D%2CNGDPRPC%2CNGDPPC%2CNGDPDPC%2CPPPGDP%2CPPPPC%2CPPPSH%2CPPPEX%2CNID_NGDP%2CNGSD_NGDP%2CPCPI%2CPCPIPCH%2CPCPIE%2CPCPIEPCH%2CTM_RPCH%2CTMG_RPCH%2CTX_RPCH%2CTXG_RPCH%2CLUR%2CLE%2CLP%2CGGR%2CGGR_NGDP%2CGGX%2CGGX_NGDP%2CGGXCNL%2CGGXCNL_NGDP%2CGGSB%2CGGSB_NPGDP%2CGGXONLB%2CGGXONLB_NGDP%2CGGXWDN%2CGGXWDN_NGDP%2CGGXWDG%2CGGXWDG_NGDP%2CNGDP_FY%2CBCA%2CBCA_NGDPD&grp=0&a=|title = Iceland|publisher = International Monetary Fund|accessdate = 1 tuber 2014}}</ref> Bill Gates ass-agi d anesbaɣur ugaren wiyaḍ nniḍen deg umaḍal s tabaɣurt n US$90&nbsp;imelyaṛen ar waggur n ɣuct 2016.<ref>{{cite news|url=http://www.bloomberg.com/news/articles/2016-08-22/bill-gates-s-net-worth-hits-record-high-of-90-billion-chart|title= Bill Gates's Net Worth Hits $90 Billion: Chart |year=2016 |accessdate= 23 ɣuct 2016|agency=Bloomberg}}</ref>
+Seg useggas 1987, Bill Gates yekcem deg [[The World's Billionaires|wumuɣ ''Forbes'' n imdanen inesbuɣar ugaren wiyaḍ nniḍen]]<ref>{{cite news|url= http://www.reuters.com/article/rbssTechMediaTelecomNews/idUSN1748882920080917 |title= Bill Gates tops US wealth list 15 years continuously |first= Phil | last= Wahba | date = September 17, 2008 |accessdate= November 6, 2008 |agency= Reuters  |archiveurl = http://www.reuters.com/article/rbssTechMediaTelecomNews/idUSN1748882920080917 |archivedate = September 16, 2012}}</ref> daɣen d netta yella d amdan anesbaɣur ugaren wiyaḍ nniḍen gar 1995 d 2007, daɣen tikkelt nniḍen deg useggwas 2009, daɣen seg 2014.<ref name="Forbes profile">{{Citation | type = profile |  url = http://www.forbes.com/profile/bill-gates/ | title = William 'Bill' Gates | journal = Forbes | accessdate = December 2014}}</ref> Gar 2009 d 2014, tabaɣurt ines t-ulli seg {{USD}}40&nbsp;imelyaṛen ar ugar n {{USD}}82&nbsp;imelyaṛen.<ref>{{cite web|title=The World's Billionaires|work=Forbes|url=http://www.forbes.com/billionaires/|accessdate=30 wamber 2014}}</ref> Gar 2013 d 2014, tabaɣurt ines terna s {{USD}}15&nbsp;imelyaṛen.<ref name="imf2">{{cite web|url = http://www.imf.org/external/pubs/ft/weo/2014/02/weodata/weorept.aspx?pr.x=57&pr.y=8&sy=2012&ey=2019&scsm=1&ssd=1&sort=country&ds=.&br=1&c=176&s=NGDP_R%2CNGDP_RPCH%2CNGDP%2CNGDPD%2CNGDP_D%2CNGDPRPC%2CNGDPPC%2CNGDPDPC%2CPPPGDP%2CPPPPC%2CPPPSH%2CPPPEX%2CNID_NGDP%2CNGSD_NGDP%2CPCPI%2CPCPIPCH%2CPCPIE%2CPCPIEPCH%2CTM_RPCH%2CTMG_RPCH%2CTX_RPCH%2CTXG_RPCH%2CLUR%2CLE%2CLP%2CGGR%2CGGR_NGDP%2CGGX%2CGGX_NGDP%2CGGXCNL%2CGGXCNL_NGDP%2CGGSB%2CGGSB_NPGDP%2CGGXONLB%2CGGXONLB_NGDP%2CGGXWDN%2CGGXWDN_NGDP%2CGGXWDG%2CGGXWDG_NGDP%2CNGDP_FY%2CBCA%2CBCA_NGDPD&grp=0&a=|title = Iceland|publisher = International Monetary Fund|accessdate = 1 tuber 2014}}</ref> Bill Gates ass-agi d anesbaɣur ugaren wiyaḍ nniḍen deg umaḍal s tabaɣurt n US$90&nbsp;imelyaṛen ar waggur n ɣuct 2016.<ref>{{cite news|url=http://www.bloomberg.com/news/articles/2016-08-22/bill-gates-s-net-worth-hits-record-high-of-90-billion-chart|title= Bill Gates's Net Worth Hits $90 Billion: Chart |year=2016 |accessdate= 23 ɣuct 2016|agency=Bloomberg}}</ref>
 
-Bill Gates d yiwen aṛemmas n [[aselkim n wuxxam|tagrawla taselkimant]] ugaren wiyaḍ nniḍen. Gates yeṭṭfed aṭas n izaɣanen ɣef tataktit ines n iweẓla, ayen ttwalin medden am mgal anemsazwar, tannayt deg kra n tijṛa sseɣretentt aṭas izrafen n tinefra.{{Sfnm |1a1=Lesinski |1y=2006 |1p=96 |2a1=Manes |2y=1994 |2p=459}}  Ticki deg umecwaṛ ines, Gates yeḍfar aṭas n isenfaren imuhaken, yefka-d tallayt tameqrant n iṣurdiyen i aṭas n tuddsiwin n ṣeddeq akkw d ahilen ussnanen n unadi seg [[Bill & Melinda Gates Foundation|Tasbeddit n Bill & Melinda Gates]], ttwassebded deg useggwas 2000.
+Bill Gates d yiwen aṛemmas n [[aselkim n wuxxam|tagrawla taselkimant]] ugaren wiyaḍ nniḍen. Gates yeṭṭef-d aṭas n izaɣanen ɣef tataktit ines n iweẓla, ayen ttwalin medden am mgal anemsazwar, tannayt deg kra n tijṛa sseɣretentt aṭas izrafen n tinefra.{{Sfnm |1a1=Lesinski |1y=2006 |1p=96 |2a1=Manes |2y=1994 |2p=459}}  Ticki deg umecwaṛ ines, Gates yeḍfar aṭas n isenfaren imuhaken, yefka-d tallayt tameqrant n iṣurdiyen i aṭas n tuddsiwin n ṣeddeq akked ahilen ussnanen n unadi seg [[Bill & Melinda Gates Foundation|Tasbeddit n Bill & Melinda Gates]], ttwassebd-d deg useggas 2000.
 
 Gates ittixer leqdic ines n aselway anemhal amatu n Microsoft deg waggur yennayer 2000. Yeqqim d aselway, dɣa yesnulfa-d amahil n aɣella amasdag n iseɣẓanen i iman-is.<ref>{{cite web|title = Gates steps down as Microsoft CEO|url = http://www.forbes.com/2000/01/13/mu7.html|website = Forbes|date = January 13, 2000|access-date = January 21, 2016|first = David|last = Einstein}}</ref> Deg waggur n yunyu 2006, Gates yesseɣret ad iɛeddi seg wakud ummid di Microsoft ar wakud amuran, daɣen ad iɛeddi ar wakud ummid di Bill & Melinda Gates Foundation.<ref>{{cite web|title = Microsoft Chairman Gates to leave day-to-day role. – Jun. 16, 2006|url = http://money.cnn.com/2006/06/15/technology/microsoft_news/index.htm?iid=EL|website = money.cnn.com|access-date = January 21, 2016}}</ref> Yessekki s ufesnan tiwura ines ar [[Ray Ozzie]] (aɣella amasdag n iseɣẓanen) d [[Craig Mundie]] (aɣella n unadi d tasuddest).<ref name=":1">{{cite web|title = Bill Gates {{!}} Development of Information and Knowledge Management|url = http://www.tlu.ee/~sirvir/IKM/Development_of_IKM/bill_gates.html|website = www.tlu.ee|access-date = January 21, 2016}}</ref> Ozzie later left the company. Gates's last full-time day at Microsoft was June 27, 2008.<ref name=":1" /> Yettixer leqdic ines n aselway n Microsoft, deg waggur furar 2014, yeṭṭfed amahil amaynu n asemtar n tisnetwilin iwakken ad yedhel CEO amaynu [[Satya Nadella]].
 
