*Empty MediaWiki Message*

--- a/18_dujamber.mw
+++ b/18_dujamber.mw
@@ -6,7 +6,7 @@ Ass '''18 [[dujamber]]''' d ass wis 352 n useggas (wis 353 deg iseggasen ''bisek
 == Tidyanin ==
 === Timiḍi wis 20 ===
 * [[1923]] : agatu ɣef [[Ṭanja]] yezmel gar [[Fransa]], [[Tagelda Yeddukklen]] d [[Spenyul]].
-* [[1925]] : Mi yella [[Akabar  asduklan n Tadukli Tasubyatit|Aswir wis XIV n Ukabar Asduklan n Tadukli Tasubyatit]], [[Joseph Stalin|Stalin]] yesserbeḥ agemmir n {{citation|tanemla deg yiwet tamurt tawḥidt}} ɣef tin n tagrawla tmaḍlant i iḥudd [[Leon Trotski]].
+* [[1925]] : Mi yella [[Akabar  asduklan n Tadukli Tasubyatit|Aswir wis XIV n Ukabar Asduklan n Tadukli Tasubyatit]], [[Joseph Stalin|Stalin]] yesserbeḥ agemmir n "tanemla deg yiwet tamurt tawḥidt" ɣef tin n tagrawla tmaḍlant i iḥudd [[Leon Trotski]].
 * [[1945]] : [[Urugway]] yekcem deg [[Umuɣ n Iwunak imaslaḍen n Tuddsa n Iɣlanen Yeddukklen|TIY]].
 * [[1956]] : [[Japun]] yekcem deg [[Umuɣ n Iwunak imaslaḍen n Tuddsa n Iɣlanen Yeddukklen|TIY]].
 * [[1976]] : anmeglay [[Vladimir Boukovsky]] yesderfi sɣur [[Musku]], mgal tasellullit n usduklan [[Luis Corvalán]] sɣur anabaḍ n [[Cili]].
