*Empty MediaWiki Message*

--- a/Umuɣ_n_timdinin_n_Merruk.mw
+++ b/Umuɣ_n_timdinin_n_Merruk.mw
@@ -239,7 +239,7 @@ I umuɣ s amizwer n amḍan n imezdaɣen af timdinin timeqqṛanin n Merruk, ẓ
 * '''[[Laakarta]]''' [C]<ref>'''[[Laakarta]]''' est le centre urbain de la commune rurale d'Ayir (cf. le {{harvsp|id=RGHP|texte=recensement de 2004}}).</ref> : {{formatnum:3116}} imezdaɣ (2004)
 * '''[[Lɛeṭṭaweyya]]''' [M] : {{formatnum:20237}} imezdaɣ (2004)
 * '''[[Leɛyun]]''' [M], chef-lieu de la [[province de Laayoune]] et de la région de [[Laâyoune-Boujdour-Sakia el Hamra|Laayoune-Boujdour-Sakia El Hamra]], dans le [[Sahara occidental]] : {{formatnum:183691}} imezdaɣ (2004)
-* '''[[Igwiren]]''' [M]<ref>Tel que l'État marocain conçoit son territoire et son découpage administratif, '''[[Lagouira]]''' est une municipalité du Royaume ; dans les faits, il s’agit d'un {{citation|village fantôme […] sous souveraineté [[mauritanie]]nne}} dont la population officiellement dénombrée vit à [[Dakhla]], une ville située à {{unité|600|km}} au nord, également dans le [[Sahara occidental]] ; généralement, le recensement d'habitants s'effectue dans la commune où ils résident (cf. l'{{harvsp|id=telquel|texte=article de ''TelQuel''}}).</ref>, ville du [[Sahara occidental]] : {{formatnum:3726}} imezdaɣ (2004)
+* '''[[Igwiren]]''' [M]<ref>Tel que l'État marocain conçoit son territoire et son découpage administratif, '''[[Lagouira]]''' est une municipalité du Royaume ; dans les faits, il s’agit d'un "village fantôme […] sous souveraineté mauritanienne" dont la population officiellement dénombrée vit à [[Dakhla]], une ville située à {{unité|600|km}} au nord, également dans le [[Sahara occidental]] ; généralement, le recensement d'habitants s'effectue dans la commune où ils résident (cf. l'{{harvsp|id=telquel|texte=article de ''TelQuel''}}).</ref>, ville du [[Sahara occidental]] : {{formatnum:3726}} imezdaɣ (2004)
 * '''[[Laxṣaṣ]]''' [M] : {{formatnum:4194}} imezdaɣ (2004)
 * '''[[Lahraouyine]]''' [M]<ref>'''[[Lahraouyine]]''', municipalité depuis 2008, était auparavant une commune rurale comportant un centre urbain du même nom dont la population était de {{formatnum:47261}} imezdaɣ en 2004 (cf. le {{harvsp|id=RGHP|texte=recensement de 2004}} et l'{{harvsp|id=DC2008|texte=article d'''Aujourd'hui le Maroc''}}).</ref> : {{formatnum:52862}} imezdaɣ (2004)
 * '''[[Lalla Mimuna]]''' [C] : {{formatnum:12994}} imezdaɣ (2004)
